--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 :root {
     --primary-color: #499328;
@@ -7,9 +8,10 @@
     --light: #FFFFFF;
     --grey: #CECECE;
     --smoke-light: #F5F5F5;
-    --main-font: 'Varela Round', sans-serif,'HelveticaNeue','Helvetica Neue','Helvetica-Neue',Helvetica,Arial,sans-serif;
+    --title-font: 'Varela Round', sans-serif,'HelveticaNeue','Helvetica Neue','Helvetica-Neue',Helvetica,Arial,sans-serif;
+    --text-font: 'Lato', sans-serif;
 }
 
 h1 {
-    font-family: var(--main-font);
+    font-family: var(--title-font);
 }
