--- a/src/View/Admin/cours.html.twig
+++ b/src/View/Admin/cours.html.twig
@@ -1,5 +1,8 @@
 {% extends 'layout.html.twig' %}
 {% block content %}
+	<header>
+		{% include "Admin/components/_navbar.html.twig" %}
+	</header>
 	<main>
 	</main>
 {% endblock %}
