--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import 'admin.css';
 
 :root {
     --primary-color: #499328;
