--- a/src/View/Admin/components/_navbar.html.twig
+++ b/src/View/Admin/components/_navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light nav-admin">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/">Haras du val de Loire</a>
+		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/haras_du_val_de_loire_logo.png" alt="logo haras"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
