--- a/src/View/Admin/components/_navbar.html.twig
+++ b/src/View/Admin/components/_navbar.html.twig
@@ -1,14 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light nav-admin">
+<nav class="navbar navbar-expand-sm navbar-light nav-admin">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/haras_du_val_de_loire_logo.png" alt="logo haras"></a>
+		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/logo_min2.png" alt="logo haras"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-link" href="/Admin/cours">Cours</a>
-				<a class="nav-link" href="">Stages</a>
-				<a class="nav-link" href="">Clients</a>
+				<button class="btn-nav-admin">
+					<a class="nav-link" href="/Admin/cours">Cours</a>
+				</button>
+				<button class="btn-nav-admin">
+					<a class="nav-link" href="">Stages</a>
+				</button>
+				<button class="btn-nav-admin">
+					<a class="nav-link" href="">Clients</a>
+				</button>
+				<button class="btn-nav-admin">
+					<a class="nav-link" href="">Others</a>
+				</button>
 			</div>
 		</div>
 	</div>
