modify css navbar-admin

--- a/src/View/Admin/components/_navbar.html.twig
+++ b/src/View/Admin/components/_navbar.html.twig
@@ -1,23 +1,15 @@
-<nav class="navbar navbar-expand-sm navbar-light nav-admin">
+<nav class="navbar navbar-expand-sm navbar-dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/logo_min.png" alt="logo haras"></a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/logo_min.png" alt="logo Haras"></a>
+		<button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<button class="btn-nav-admin">
-					<a class="nav-link" href="/Admin/cours">Cours</a>
-				</button>
-				<button class="btn-nav-admin">
-					<a class="nav-link" href="">Stages</a>
-				</button>
-				<button class="btn-nav-admin">
-					<a class="nav-link" href="">Clients</a>
-				</button>
-				<button class="btn-nav-admin">
-					<a class="nav-link" href="">Others</a>
-				</button>
+				<a class="btn-nav-admin" href="/Admin/cours">Cours</a>
+				<a class="btn-nav-admin" href="">Stage</a>
+				<a class="btn-nav-admin" href="">Client</a>
+				<a class="btn-nav-admin" href="">Autre</a>
 			</div>
 		</div>
 	</div>
