--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1,44 +1,54 @@
-.nav-admin{
-    background-color: var(--light);
-    font-family: var(--title-font);
+:root{
+    --full: 100%;
 }
 
-.navbar-light .navbar-nav .nav-link{
-    color: var(--dark);
-}
-
-.navbar{
+.navbar {
     position: relative;
 }
 
-.navbar-nav{
-    width: 100%;
+.navbar-nav {
+    width: var(--full);
     justify-content: space-around;
 }
 
-.navbar::before{
+.navbar::before {
     position: absolute;
     top: 0;
     content: ' ';
-    width: 100%;
+    width: var(--full);
     height: 6px;
     background-color: var(--primary-color);
 }
 
-.btn-nav-admin{
+.btn-nav-admin {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     padding: 0;
-    border-radius: 7px;
-    width: 100px;
+    border-radius: 100px;
+    width: 90px;
+    height: 35px;
     background-color: var(--primary-color);
     font-family: var(--title-font);
+    text-decoration: none;
+    color: var(--light);
 }
 
-@media screen and (max-width: 575px){
-    .btn-nav-admin{
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.btn-nav-admin:hover {
+    color: var(--secondary-color);
+}
+
+.navbar-toggler {
+    background-color: var(--primary-color);
+}
+
+@media screen and (max-width: 575px) {
+    .btn-nav-admin {
         width: 100%;
         margin-bottom: 2px;
     }
