--- a/src/View/Includes/_navbar.html.twig
+++ b/src/View/Includes/_navbar.html.twig
@@ -6,10 +6,7 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="btn-nav-admin" href="/Admin/cours">Cours</a>
-				<a class="btn-nav-admin" href="">Stage</a>
-				<a class="btn-nav-admin" href="">Client</a>
-				<a class="btn-nav-admin" href="">Autre</a>
+				{% block buttons %}{% endblock %}
 			</div>
 		</div>
 	</div>
