rename in english view and method controller course

--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -1,7 +1,7 @@
 {% extends "/Includes/_navbar.html.twig" %}
 
 {% block buttons %}
-	<a class="btn-nav-admin" href="/Admin/cours">Cours</a>
+	<a class="btn-nav-admin" href="/Admin/course">Cours</a>
 	<a class="btn-nav-admin" href="">Stage</a>
 	<a class="btn-nav-admin" href="">Client</a>
 {% endblock %}
