--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -1,7 +1,15 @@
-{% extends "/Includes/_navbar.html.twig" %}
-
-{% block buttons %}
-	<a class="btn-nav-admin" href="/Admin/course">Cours</a>
-	<a class="btn-nav-admin" href="">Stage</a>
-	<a class="btn-nav-admin" href="">Client</a>
-{% endblock %}
+<nav class="navbar navbar-expand-sm navbar-dark navAdmin">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/logo_min.png" alt="logo Haras"></a>
+		<button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav">
+				<a class="btn-nav-admin" href="/Admin/course">Cours</a>
+				<a class="btn-nav-admin" href="">Stage</a>
+				<a class="btn-nav-admin" href="">Client</a>
+			</div>
+		</div>
+	</div>
+</nav>
