--- a/src/View/Admin/course.html.twig
+++ b/src/View/Admin/course.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 {% block stylesheet %}
-	<link rel="stylesheet" href="/assets/css/admin.css">
+	<link rel="stylesheet" href="/assets/css/navbar_admin.css">
 {% endblock %}
 {% block navbar %}
 	<header>
