--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark navAdmin">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/logo_min.png" alt="logo Haras"></a>
+		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/logo_min.png" alt="logo Haras">Haras du val de loire</a>
 		<button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
