--- a/public/assets/css/navbar_admin.css
+++ b/public/assets/css/navbar_admin.css
@@ -1,5 +1,6 @@
 :root{
     --full-relative: 100%;
+    --zero: 0;
 }
 
 .navAdmin .navbar {
@@ -7,11 +8,12 @@
 }
 
 .navAdmin::before {
+    --border-height: 6px;
     position: absolute;
-    top: 0;
+    top: var(--zero);
     content: ' ';
     width: var(--full-relative);
-    height: 6px;
+    height: var(--border-height);
     background-color: var(--primary-color);
 }
 
@@ -21,14 +23,17 @@
 }
 
 .navAdmin .btn-nav-admin {
+    --width-btn: 90px;
+    --height-btn: 35px;
+    --radius-btn: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 0;
-    border-radius: 100px;
-    width: 90px;
-    height: 35px;
+    padding: var(--zero);
+    border-radius: var(--radius-btn);
+    width: var(--width-btn);
+    height: var(--height-btn);
     background-color: var(--primary-color);
     font-family: var(--title-font);
     text-decoration: none;
@@ -49,11 +54,13 @@
 
 @media screen and (max-width: 575px) {
     .navAdmin .btn-nav-admin {
-        width: 100%;
-        margin-bottom: 2px;
+        --spacing-bottom-btn: 2px;
+        width: var(--full-relative);
+        margin-bottom: var(--spacing-bottom-btn);
     }
 
     .navAdmin .navbar-brand{
-        width: 70%;
+        --reduce: 30%;
+        width: calc(var(--full-relative) - var(--reduce));
     }
 }
