application de la police

--- a/public/assets/css/course_tab.css
+++ b/public/assets/css/course_tab.css
@@ -6,6 +6,7 @@
     background-color: var(--grey);
     flex-direction: column;
     flex-wrap: wrap;
+    font-family: var(--text-font);
 }
 
 .tab {
