--- a/public/assets/css/admin_formulary.css
+++ b/public/assets/css/admin_formulary.css
@@ -1,12 +1,14 @@
 .form-course-admin form{
+    --formulary-center: 5% 20%;
     display: flex;
     flex-direction: column;
-    padding: 5% 20%;
+    padding: var(--formulary-center);
 }
 
 .form-course-admin .form-group
 {
-    margin-bottom: 20px;
+    --spacing-fields: 20px;
+    margin-bottom: var(--spacing-fields);
 }
 
 .form-course-admin .btn-formulary{
