S01US10 update class CSS et scroll

--- a/src/View/User/Includes/carousel.html.twig
+++ b/src/View/User/Includes/carousel.html.twig
@@ -1,22 +1,23 @@
+<div class="carousel__body">
 <section class="carousel" aria-label="Gallery">
     <ol class="carousel__viewport">
-        <li id="carousel__slide1" tabindex="0" class="carousel__slide">
+        <li id="carousel__slide1" tabindex="0" class="carousel__slide1">
             <div class="carousel__snapper">
                 <a href="#carousel__slide4" class="carousel__prev">Go to last slide</a>
                 <a href="#carousel__slide2" class="carousel__next">Go to next slide</a>
             </div>
         </li>
-        <li id="carousel__slide2" tabindex="0" class="carousel__slide">
+        <li id="carousel__slide2" tabindex="0" class="carousel__slide2">
             <div class="carousel__snapper"></div>
             <a href="#carousel__slide1" class="carousel__prev">Go to previous slide</a>
             <a href="#carousel__slide3" class="carousel__next">Go to next slide</a>
         </li>
-        <li id="carousel__slide3" tabindex="0" class="carousel__slide">
+        <li id="carousel__slide3" tabindex="0" class="carousel__slide3">
             <div class="carousel__snapper"></div>
             <a href="#carousel__slide2" class="carousel__prev">Go to previous slide</a>
             <a href="#carousel__slide4" class="carousel__next">Go to next slide</a>
         </li>
-        <li id="carousel__slide4" tabindex="0" class="carousel__slide">
+        <li id="carousel__slide4" tabindex="0" class="carousel__slide4">
             <div class="carousel__snapper"></div>
             <a href="#carousel__slide3" class="carousel__prev">Go to previous slide</a>
             <a href="#carousel__slide1" class="carousel__next">Go to first slide</a>
@@ -39,3 +40,4 @@
         </ol>
     </aside>
 </section>
+</div>
