--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -1,94 +1,57 @@
-@keyframes tonext {
-    75% {
-        left: 0;
-    }
-    95% {
-        left: 100%;
-    }
-    98% {
-        left: 100%;
-    }
-    99% {
-        left: 0;
-    }
-}
-
-@keyframes tostart {
-    75% {
-        left: 0;
-    }
-    95% {
-        left: -300%;
-    }
-    98% {
-        left: -300%;
-    }
-    99% {
-        left: 0;
-    }
-}
-
-@keyframes snap {
-    96% {
-        scroll-snap-align: center;
-    }
-    97% {
-        scroll-snap-align: none;
-    }
-    99% {
-        scroll-snap-align: none;
-    }
-    100% {
-        scroll-snap-align: center;
-    }
-}
-
-body {
+.carousel__body {
     max-width: 37.5rem;
     margin: 0 auto;
     padding: 0 1.25rem;
-    font-family: 'Lato', sans-serif;
-}
-
-* {
-    box-sizing: border-box;
-    scrollbar-color: transparent transparent;
-    /* thumb and track color */
-    scrollbar-width: 0px;
-}
-
-*::-webkit-scrollbar {
-    width: 0;
-}
-
-*::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-    background: transparent;
-    border: none;
-}
-
-* {
-    -ms-overflow-style: none;
-}
-
-ol,
-li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
 .carousel {
+    font-family: 'Lato', sans-serif;
     position: relative;
     padding-top: 75%;
     filter: drop-shadow(0 0 10px #0003);
     perspective: 100px;
 }
 
+.carousel__slide1,
+.carousel__slide2,
+.carousel__slide3,
+.carousel__slide4 {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    flex: 0 0 100%;
+    counter-increment: item;
+}
+
+.carousel__slide1 {
+    background-size: cover;
+    width: 300px;
+    background-image: url(../images/accueil.jpg);
+}
+
+.carousel__slide2 {
+    background-size: cover;
+    width: 300px;
+    background-image: url(../images/accueil.jpg);
+}
+
+.carousel__slide3 {
+    background-size: cover;
+    width: 300px;
+    background-image: url(../images/haras.jpg);
+}
+
+.carousel__slide4 {
+    background-size: cover;
+    width: 300px;
+    background-image: url(../images/favicon.png);
+}
+
 .carousel__viewport {
+    list-style: none;
+    margin: 0;
+    padding: 0;
     position: absolute;
     top: 0;
     right: 0;
@@ -101,25 +64,12 @@ li {
     scroll-snap-type: x mandatory;
 }
 
-.carousel__slide {
-    position: relative;
-    flex: 0 0 100%;
-    width: 100%;
-    background-image: white;
-    counter-increment: item;
-}
-
-.carousel__slide:nth-child(even) {
-    background-image: white;
-}
-
 .carousel__slide:before {
     content: counter(item);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -40%, 70px);
-    color: #fff;
     font-size: 2em;
 }
 
