--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark navAdmin">
+<nav class="navbar navbar-expand-sm navbar-dark nav">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="/"><img class="logo" src="/assets/images/logo_min.png" alt="logo Haras">Haras du val de loire</a>
 		<button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,9 +6,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="btn-nav-admin" href="/Admin/course">Cours</a>
-				<a class="btn-nav-admin" href="">Stage</a>
-				<a class="btn-nav-admin" href="">Client</a>
+				<a class="btn-nav" href="/Admin/course">Cours</a>
+				<a class="btn-nav" href="">Stage</a>
+				<a class="btn-nav" href="">Client</a>
 			</div>
 		</div>
 	</div>
