--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -1,3 +1,14 @@
+element {
+    --width_pics: 300px;
+    --carouselNav_WidthHeight: 4rem;
+    --carouselSizeButton: 1.5rem;
+}
+
+pourcent {
+    --fiftyPourcent: 50%;
+    --hundredPourcent: 100%;
+}
+
 .carousel__body {
     max-width: 37.5rem;
     margin: 0 auto;
@@ -20,31 +31,31 @@
     margin: 0;
     padding: 0;
     position: relative;
-    flex: 0 0 100%;
+    flex: 0 0 var(--hundredPourcent);
     counter-increment: item;
 }
 
 .carousel__slide1 {
     background-size: cover;
-    width: 300px;
+    width: var(--width_pics);
     background-image: url(../images/accueil.jpg);
 }
 
 .carousel__slide2 {
     background-size: cover;
-    width: 300px;
+    width: var(--width_pics);
     background-image: url(../images/accueil.jpg);
 }
 
 .carousel__slide3 {
     background-size: cover;
-    width: 300px;
+    width: var(--width_pics);
     background-image: url(../images/haras.jpg);
 }
 
 .carousel__slide4 {
     background-size: cover;
-    width: 300px;
+    width: var(--width_pics);
     background-image: url(../images/favicon.png);
 }
 
@@ -67,8 +78,8 @@
 .carousel__slide:before {
     content: counter(item);
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: var(--fiftyPourcent);
+    left: var( --fiftyPourcent);
     transform: translate3d(-50%, -40%, 70px);
     font-size: 2em;
 }
@@ -77,8 +88,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: var(--hundredPourcent);
+    height: var(--hundredPourcent);
     scroll-snap-align: center;
 }
 
@@ -120,12 +131,12 @@
 
 .carousel__navigation-button {
     display: inline-block;
-    width: 1.5rem;
-    height: 1.5rem;
+    width: var(--carouselSizeButton);
+    height: var(--carouselSizeButton);
     background-color: #333;
     background-clip: content-box;
     border: 0.25rem solid transparent;
-    border-radius: 50%;
+    border-radius: var( --fiftyPourcent);
     font-size: 0;
     transition: transform 0.1s;
 }
@@ -137,10 +148,10 @@
     position: absolute;
     top: 0;
     margin-top: 37.5%;
-    width: 4rem;
-    height: 4rem;
+    width: var(--carouselNav_WidthHeight);
+    height: var(--carouselNav_WidthHeight);
     transform: translateY(-50%);
-    border-radius: 50%;
+    border-radius: var(--fiftyPourcent);
     font-size: 0;
     outline: 0;
 }
@@ -160,12 +171,12 @@
     content: '';
     z-index: 1;
     background-color: #333;
-    background-size: 1.5rem 1.5rem;
+    background-size: var(--carouselSizeButton) var(--carouselSizeButton);
     background-repeat: no-repeat;
     background-position: center center;
     color: #fff;
     font-size: 2.5rem;
-    line-height: 4rem;
+    line-height: var(--carouselNav_WidthHeight);
     text-align: center;
     pointer-events: none;
 }
