S01US10 update added variables css

--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -4,7 +4,7 @@ element {
     --carouselSizeButton: 1.5rem;
 }
 
-pourcent {
+pourcentages {
     --fiftyPourcent: 50%;
     --hundredPourcent: 100%;
 }
