--- a/src/View/Admin/Includes/_formularyCourse.html.twig
+++ b/src/View/Admin/Includes/_formularyCourse.html.twig
@@ -9,28 +9,24 @@
 			<input class="form-control" type="time" name="time-start" id="time-start" min="09:00" max="22:00" pattern="[0-9]{2}:[0-9]{2}" placeholder="00:00">
 		</div>
 		<div class="form-group">
-			<label for="time-finsih">Heure de fin</label>
-			<input class="form-control" type="time" name="time-finsih" id="time-finsih" min="09:00" max="22:00" pattern="[0-9]{2}:[0-9]{2}" placeholder="00:00">
+			<label for="duration">Durée</label>
+			<input class="form-control" type="number" name="duration" id="duration">
 		</div>
 		<div class="form-group">
-			<label for="difficulty">Niveau du cours</label>
-			<select class="form-control" name="difficulty" id="difficulty">
-				<option value="">Selectionnez le niveau du cours</option>
-				<option value="">Eveil Poney</option>
-				<option value="">Débutant</option>
-				<option value="">Poney de bronze</option>
-				<option value="">Poney d'argent</option>
-				<option value="">Poney d'or</option>
+			<label for="target">Professeurs</label>
+			<select class="form-control" name="target" id="target" multiple>
+				<option value="">Quel professeur peut dispenser le cours</option>
+				<option value="prof1">prof1</option>
+				<option value="prof2">prof2</option>
+				<option value="prof3">prof3</option>
+				<option value="prof3">prof4</option>
+				<option value="prof3">prof5</option>
+				<option value="prof3">prof6</option>
 			</select>
 		</div>
 		<div class="form-group">
-			<label for="target">Cible du cours</label>
-			<select class="form-control" name="target" id="target">
-				<option value="">Selectionnez la cible de votre cours</option>
-				<option value="beginner">Débutant</option>
-				<option value="teenager">Adolescent</option>
-				<option value="adult">Adulte</option>
-			</select>
+			<label for="capacity">Nombre d'élèves</label>
+			<input class="form-control" type="number" name="capacity" id="capacity">
 		</div>
 		<button class="btn btn-primary btn-formulary" type="submit">Enregistrer</button>
 	</form>
