--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -1,80 +1,88 @@
 {% block course_tab %}
 <div class="course-tab-section col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
-    <div class="tab_title_text">
-        <p class="tab_title">
+    <div class="tab-title-text">
+        <p class="tab-title">
             CONDITIONS
         </p>
-        <p class="tab_text">
-            </br> Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
+        <p class="tab-text">
+            Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
         </p>
     </div>
-    <div class="tab_title_text">
-    <p class="tab_title">
-        INSCRIPTION
-    </p>
-    <p class="tab_text">
-        </br> Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
-    </p>
+    <div class="tab-title-text">
+        <p class="tab-title">
+            INSCRIPTION
+        </p>
+        <p class="tab-text">
+            Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
+        </p>
     </div>
-    <div class="btn_insc">
-        <button class="btn_inscription" type="button">
+    <div class="btn-insc">
+        <button class="btn-inscription" type="button">
             JE M'INSCRIS !
         </button>
     </div>
-    <p class="tab_title">
+    <p class="tab-title">
         DETAILS
     </p>
     <div class="tab">
-        <button class="btn_course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
-            Baby Poneys
+        <button class="btn-course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
+            Baby Poney
         </button>    
-    <div class="collapse" id="collapse1">
-        <div class="card card-body">
-            Âge minimum: à partir de 18 mois </br>
-        <div class="img_course">
-            <img src="" alt="Baby Poney photo">
-        </div>
-            Horaires: </br>
-            Tarif: </br>
-        </div>
-    </div> 
-        <button class="btn_course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
-            Eveil Poneys
+        <div class="collapse" id="collapse1">
+            <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/id/1024/300/300" class="card-img-top" alt="Baby Poney Photo">
+                <div class="card-body">
+                    <p class="card-text">
+                    <p> Âge: à partir de 18 mois </p>
+                    <p> Horaires: </p>
+                    <p> Tarif: </p>
+                    </p>
+                </div>
+            </div>
+        </div> 
+        <button class="btn-course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+            Eveil Poney
         </button>    
         <div class="collapse" id="collapse2">
-            <div class="card card-body">
-                Âge: 3 à 5 ans </br>
-                <div class="img_course">
-                    <img src="" alt="Eveil Poney photo">
+            <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/id/1003/300/300" class="card-img-top" alt="Baby Poney Photo">
+                <div class="card-body">
+                    <p class="card-text">
+                    <p> Âge: 3 à 5 ans </p>
+                    <p> Horaires: </p>
+                    <p> Tarif: </p>
+                    </p>
                 </div>
-                Horaires: </br>
-                Tarif: </br>
             </div>
         </div>
-        <button class="btn_course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
-            Poneys
+        <button class="btn-course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+            Poney
         </button>
         <div class="collapse" id="collapse3">
-            <div class="card card-body">
-                Âge minimum: 6 ans </br>
-                <div class="img_course">
-                    <img src="" alt="Poney photo">
+            <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/id/1084/300/300" class="card-img-top" alt="Baby Poney Photo">
+                <div class="card-body">
+                    <p class="card-text">
+                    <p> Âge: à partir de 6 ans</p>
+                    <p> Horaires: </p>
+                    <p> Tarif: </p>
+                    </p>
                 </div>
-                Horaires: </br>
-                Tarif: </br>
             </div>
         </div>
-        <button class="btn_course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
+        <button class="btn-course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
             Cheval
         </button>
         <div class="collapse" id="collapse4">
-            <div class="card card-body">
-                Niveau minimum: Galop 3 </br>
-                <div class="img_course">
-                    <img src="" alt="Cheval Privilège photo">
+            <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/id/200/300/300" class="card-img-top" alt="Baby Poney Photo">
+                <div class="card-body">
+                    <p class="card-text">
+                    <p> Niveau minimum: Galop 3 </p>
+                    <p> Horaires: </p>
+                    <p> Tarif: </p>
+                    </p>
                 </div>
-                Horaires: </br>
-                Tarif: </br>
             </div>
         </div>
     </div>
