--- a/src/View/Admin/course.html.twig
+++ b/src/View/Admin/course.html.twig
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
 	<main>
+		<h1>Administration: Cours</h1>
 		{% include "Admin/Includes/_formularyCourse.html.twig" %}
 	</main>
 {% endblock %}
