--- a/src/View/Admin/Includes/_formularyCourse.html.twig
+++ b/src/View/Admin/Includes/_formularyCourse.html.twig
@@ -1,4 +1,14 @@
 <div class="form-course-admin">
+	{% if errors%}
+		<ul class="errors">
+			{% for error in errors %}
+				<li>{{error}}</li>
+			{% endfor %}
+		</ul>
+	{% endif %}
+	{% if success %}
+		<p class="success">{{success}}</p>
+	{% endif %}
 	<form action="" method="POST">
 		<div class="form-group">
 			<label for="name">Nom du cours</label>
@@ -13,8 +23,8 @@
 			<input class="form-control" type="number" name="duration" id="duration">
 		</div>
 		<div class="form-group">
-			<label for="target">Professeurs</label>
-			<select class="form-control" name="target" id="target" multiple>
+			<label for="teacher">Professeurs</label>
+			<select class="form-control" name="teacher" id="teacher" multiple>
 				<option value="">Quel professeur peut dispenser le cours</option>
 				<option value="prof1">prof1</option>
 				<option value="prof2">prof2</option>
