--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -1,17 +1,17 @@
 {% block course_tab %}
 <div class="course-tab-section col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
     <div class="tab-title-text">
-        <p class="tab-title">
+        <h2 class="tab-title">
             CONDITIONS
-        </p>
+        </h2>
         <p class="tab-text">
             Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
         </p>
     </div>
     <div class="tab-title-text">
-        <p class="tab-title">
+        <h2 class="tab-title">
             INSCRIPTION
-        </p>
+        </h2>
         <p class="tab-text">
             Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
         </p>
@@ -21,9 +21,9 @@
             JE M'INSCRIS !
         </button>
     </div>
-    <p class="tab-title">
+    <h2 class="tab-title">
         DETAILS
-    </p>
+    </h2>
     <div class="tab">
         <button class="btn-course" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
             Baby Poney
@@ -33,9 +33,9 @@
                 <img src="https://picsum.photos/id/1024/300/300" class="card-img-top" alt="Baby Poney Photo">
                 <div class="card-body">
                     <p class="card-text">
-                    <p> Âge: à partir de 18 mois </p>
-                    <p> Horaires: </p>
-                    <p> Tarif: </p>
+                    <li> Âge: à partir de 18 mois </li>
+                    <li> Horaires: </li>
+                    <li> Tarif: </li>
                     </p>
                 </div>
             </div>
@@ -48,9 +48,9 @@
                 <img src="https://picsum.photos/id/1003/300/300" class="card-img-top" alt="Baby Poney Photo">
                 <div class="card-body">
                     <p class="card-text">
-                    <p> Âge: 3 à 5 ans </p>
-                    <p> Horaires: </p>
-                    <p> Tarif: </p>
+                    <li> Âge: 3 à 5 ans </li>
+                    <li> Horaires: </li>
+                    <li> Tarif: </li>
                     </p>
                 </div>
             </div>
@@ -63,9 +63,9 @@
                 <img src="https://picsum.photos/id/1084/300/300" class="card-img-top" alt="Baby Poney Photo">
                 <div class="card-body">
                     <p class="card-text">
-                    <p> Âge: à partir de 6 ans</p>
-                    <p> Horaires: </p>
-                    <p> Tarif: </p>
+                    <li> Âge: à partir de 6 ans</li>
+                    <li> Horaires: </li>
+                    <li> Tarif: </li>
                     </p>
                 </div>
             </div>
@@ -78,9 +78,9 @@
                 <img src="https://picsum.photos/id/200/300/300" class="card-img-top" alt="Baby Poney Photo">
                 <div class="card-body">
                     <p class="card-text">
-                    <p> Niveau minimum: Galop 3 </p>
-                    <p> Horaires: </p>
-                    <p> Tarif: </p>
+                    <li> Niveau minimum: Galop 3 </li>
+                    <li> Horaires: </li>
+                    <li> Tarif: </li>
                     </p>
                 </div>
             </div>
