--- a/src/View/User/Includes/_welcome_background_slideshow.html.twig
+++ b/src/View/User/Includes/_welcome_background_slideshow.html.twig
@@ -5,6 +5,9 @@
         </div>
         <div class="content">
             <div class="principal">
+            <h1>lorem ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                {% include 'User/Includes/_welcome_card.html.twig' %}
             </div>
         </div>
 </div>
