--- a/src/View/Admin/Includes/_formularyCourse.html.twig
+++ b/src/View/Admin/Includes/_formularyCourse.html.twig
@@ -9,34 +9,44 @@
 	{% if success %}
 		<p class="success">{{success}}</p>
 	{% endif %}
-	<form action="" method="POST">
+	<form action="" method="POST" novalidate>
 		<div class="form-group">
 			<label for="name">Nom du cours</label>
-			<input class="form-control" type="text" name="name" id="name">
+			<input class="form-control" type="text" name="name" id="name" placeholder="Baby Poney" required value="{{formulary.name}}">
 		</div>
 		<div class="form-group">
-			<label for="time-start">Heure de début</label>
-			<input class="form-control" type="time" name="time-start" id="time-start" min="09:00" max="22:00" pattern="[0-9]{2}:[0-9]{2}" placeholder="00:00">
+			<label for="day">Jour du cours</label>
+			<select class="form-control" name="day" id="day">
+				<option value="">Selectionner le jour de la semaine</option>
+				<option value="Lundi" {% if formulary.day == "Lundi" %} selecselected="selected"ted {% endif %}>Lundi</option>
+				<option value="Mardi" {% if formulary.day == "Mardi" %} selected="selected" {% endif %}>Mardi</option>
+				<option value="Mercredi" {% if formulary.day == "Mercredi" %} selected="selected" {% endif %}>Mercredi</option>
+				<option value="Jeudi" {% if formulary.day == "Jeudi" %} selected="selected" {% endif %}>Jeudi</option>
+				<option value="Vendredi" {% if formulary.day == "Vendredi" %} selected="selected" {% endif %}>Vendredi</option>
+				<option value="Samedi" {% if formulary.day == "Samedi" %} selected="selected" {% endif %}>Samedi</option>
+				<option value="Dimanche" {% if formulary.day == "Dimanche" %} selected="selected" {% endif %}>Dimanche</option>
+			</select>
 		</div>
 		<div class="form-group">
-			<label for="duration">Durée</label>
-			<input class="form-control" type="number" name="duration" id="duration">
+			<label for="time">Heure de début</label>
+			<input class="form-control" type="time" name="time" id="time" required value="{{formulary.time}}">
+		</div>
+		<div class="form-group">
+			<label for="duration">Durée (minutes)</label>
+			<input class="form-control" type="text" name="duration" id="duration" required value="{{formulary.duration}}" placeholder="maximum 120 minutes">
 		</div>
 		<div class="form-group">
 			<label for="teacher">Professeurs</label>
-			<select class="form-control" name="teacher" id="teacher" multiple>
+			<select class="form-control" name="teacher" id="teachers" required>
 				<option value="">Quel professeur peut dispenser le cours</option>
-				<option value="prof1">prof1</option>
-				<option value="prof2">prof2</option>
-				<option value="prof3">prof3</option>
-				<option value="prof3">prof4</option>
-				<option value="prof3">prof5</option>
-				<option value="prof3">prof6</option>
+				<option value="prof1" {% if formulary.teacher == "prof1" %} selected="selected" {% endif %}>prof1</option>
+				<option value="prof2" {% if formulary.teacher == "prof2" %} selected="selected" {% endif %}>prof2</option>
+				<option value="prof3" {% if formulary.teacher == "prof3" %} selected="selected" {% endif %}>prof3</option>
 			</select>
 		</div>
 		<div class="form-group">
 			<label for="capacity">Nombre d'élèves</label>
-			<input class="form-control" type="number" name="capacity" id="capacity">
+			<input class="form-control" type="text" name="capacity" id="capacity" required value="{{formulary.capacity}}" placeholder="maximum 20 pesonnes">
 		</div>
 		<button class="btn btn-primary btn-formulary" type="submit">Enregistrer</button>
 	</form>
