S01US10 correction and fix bug carousel

--- a/src/View/User/Includes/carousel.html.twig
+++ b/src/View/User/Includes/carousel.html.twig
@@ -1,43 +1,21 @@
-<div class="carousel__body">
-<section class="carousel" aria-label="Gallery">
-    <ol class="carousel__viewport">
-        <li id="carousel__slide1" tabindex="0" class="carousel__slide1">
-            <div class="carousel__snapper">
-                <a href="#carousel__slide4" class="carousel__prev">Go to last slide</a>
-                <a href="#carousel__slide2" class="carousel__next">Go to next slide</a>
-            </div>
-        </li>
-        <li id="carousel__slide2" tabindex="0" class="carousel__slide2">
-            <div class="carousel__snapper"></div>
-            <a href="#carousel__slide1" class="carousel__prev">Go to previous slide</a>
-            <a href="#carousel__slide3" class="carousel__next">Go to next slide</a>
-        </li>
-        <li id="carousel__slide3" tabindex="0" class="carousel__slide3">
-            <div class="carousel__snapper"></div>
-            <a href="#carousel__slide2" class="carousel__prev">Go to previous slide</a>
-            <a href="#carousel__slide4" class="carousel__next">Go to next slide</a>
-        </li>
-        <li id="carousel__slide4" tabindex="0" class="carousel__slide4">
-            <div class="carousel__snapper"></div>
-            <a href="#carousel__slide3" class="carousel__prev">Go to previous slide</a>
-            <a href="#carousel__slide1" class="carousel__next">Go to first slide</a>
-        </li>
-    </ol>
-    <aside class="carousel__navigation">
-        <ol class="carousel__navigation-list">
-            <li class="carousel__navigation-item">
-                <a href="#carousel__slide1" class="carousel__navigation-button">Go to slide 1</a>
-            </li>
-            <li class="carousel__navigation-item">
-                <a href="#carousel__slide2" class="carousel__navigation-button">Go to slide 2</a>
-            </li>
-            <li class="carousel__navigation-item">
-                <a href="#carousel__slide3" class="carousel__navigation-button">Go to slide 3</a>
-            </li>
-            <li class="carousel__navigation-item">
-                <a href="#carousel__slide4" class="carousel__navigation-button">Go to slide 4</a>
-            </li>
-        </ol>
-    </aside>
-</section>
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/assets/images/accueil.jpg" class="d-block w-100" style="max-width: auto; height: auto;">
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/haras.jpg" class="d-block w-100" style="max-width: auto; height: auto;">
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/images/accueil.jpg" class="d-block w-100" style="max-width: auto; height: auto;">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
