--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -32,11 +32,11 @@
             <div class="card" style="width: 18rem;">
                 <img src="https://picsum.photos/id/1024/300/300" class="card-img-top" alt="Baby Poney Photo">
                 <div class="card-body">
-                    <p class="card-text">
-                    <li> Âge: à partir de 18 mois </li>
-                    <li> Horaires: </li>
-                    <li> Tarif: </li>
-                    </p>
+                    <ul class="card-text">
+                        <li> Âge: à partir de 18 mois </li>
+                        <li> Horaires: </li>
+                        <li> Tarif: </li>
+                    </ul>
                 </div>
             </div>
         </div> 
@@ -47,11 +47,11 @@
             <div class="card" style="width: 18rem;">
                 <img src="https://picsum.photos/id/1003/300/300" class="card-img-top" alt="Baby Poney Photo">
                 <div class="card-body">
-                    <p class="card-text">
-                    <li> Âge: 3 à 5 ans </li>
-                    <li> Horaires: </li>
-                    <li> Tarif: </li>
-                    </p>
+                    <ul class="card-text">
+                        <li> Âge: 3 à 5 ans </li>
+                        <li> Horaires: </li>
+                        <li> Tarif: </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -62,11 +62,11 @@
             <div class="card" style="width: 18rem;">
                 <img src="https://picsum.photos/id/1084/300/300" class="card-img-top" alt="Baby Poney Photo">
                 <div class="card-body">
-                    <p class="card-text">
-                    <li> Âge: à partir de 6 ans</li>
-                    <li> Horaires: </li>
-                    <li> Tarif: </li>
-                    </p>
+                    <ul class="card-text">
+                        <li> Âge: à partir de 6 ans</li>
+                        <li> Horaires: </li>
+                        <li> Tarif: </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -77,11 +77,11 @@
             <div class="card" style="width: 18rem;">
                 <img src="https://picsum.photos/id/200/300/300" class="card-img-top" alt="Baby Poney Photo">
                 <div class="card-body">
-                    <p class="card-text">
-                    <li> Niveau minimum: Galop 3 </li>
-                    <li> Horaires: </li>
-                    <li> Tarif: </li>
-                    </p>
+                    <ul class="card-text">
+                        <li> Niveau minimum: Galop 3 </li>
+                        <li> Horaires: </li>
+                        <li> Tarif: </li>
+                    </ul>
                 </div>
             </div>
         </div>
