--- a/src/View/Admin/Includes/_formularyCourse.html.twig
+++ b/src/View/Admin/Includes/_formularyCourse.html.twig
@@ -9,7 +9,7 @@
 	{% if success %}
 		<p class="success">{{success}}</p>
 	{% endif %}
-	<form action="" method="POST" novalidate>
+	<form action="" method="POST">
 		<div class="form-group">
 			<label for="name">Nom du cours</label>
 			<input class="form-control" type="text" name="name" id="name" placeholder="Baby Poney" required value="{{formulary.name}}">
