--- a/public/assets/css/haras_googlemap.css
+++ b/public/assets/css/haras_googlemap.css
@@ -1,13 +1,10 @@
 .haras-googlemap {
+    --border: 1px;
+    --border-radius: 0.5em;
+    --padding: 0.1em;
     display: flex;
     justify-content: center;
-    border: 1px solid var(--primary-color);
-    border-radius: 0.5em;
-    padding: 0.1em;
-}
-
-@media screen and (max-width: 800px) {
-    .haras-googlemap {
-        margin: 3em;
-    }
+    border: var(--border) solid var(--primary-color);
+    border-radius: var(--border-radius);
+    padding: var(--padding);
 }
