--- a/src/View/User/Includes/_haras_googlemap.html.twig
+++ b/src/View/User/Includes/_haras_googlemap.html.twig
@@ -1,4 +1,4 @@
-<div class="haras-googlemap col-sm-5 offset-sm-2">
+<div class="haras-googlemap col-lg-5 offset-lg-2 col-sm-10 offset-sm-1">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2676.244764169414!2d1.973995115893255!3d47.873588177488834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e4e304e4ddb9c3%3A0xa8f9064ed6e47080!2sHaras%20du%20Val%20de%20Loire%20-%20Poney-Club%20Orl%C3%A9ans!5e0!3m2!1sfr!2sfr!4v1618489841413!5m2!1sfr!2sfr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy">
     </iframe>
 </div>
