--- a/src/View/Includes/Banner/layoutBanner.html.twig
+++ b/src/View/Includes/Banner/layoutBanner.html.twig
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0 banner border-top border-bottom border-dark">
-    {% block picture %}{% endblock %}
+<div class="container-fluid p-0 banner">
+	{% block picture %}{% endblock %}
 	{% block pageTitle %}{% endblock %}
 </div>
