--- a/src/View/Includes/Banner/pages/_bannerExemple.html.twig
+++ b/src/View/Includes/Banner/pages/_bannerExemple.html.twig
@@ -4,5 +4,5 @@
 	<img class="img-banner" src="/assets/images/collector.webp" alt="mascotte">
 {% endblock %}
 {% block pageTitle %}
-    <h1 class="text-light">Acceuil</h1>
+    <h1 class="text-light">Haras du Val de Loire</h1>
 {% endblock %}
