--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -2,4 +2,5 @@
 
 {% block content %}
     <h1>Haras Poney</h1>
+    {% include 'Includes/GreyBlocRight/pages/_greyBlocRightExemple.html.twig' %}
 {% endblock %}
