Setting css + changed phone number & email

--- a/src/View/Includes/_footer.html.twig
+++ b/src/View/Includes/_footer.html.twig
@@ -3,25 +3,25 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-sm-6 col-md-4 item">
-                    <h3>A propos de nous</h3>
+                    <h2>A propos de nous</h2>
                     <ul>
                         <li><a href="#">Accueil</a></li>
                         <li><a href="#">Nous contacter</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-6 col-md-4 item">
-                    <h3>Services</h3>
+                    <h2>Services</h2>
                     <ul>
                         <li><a href="#">Cours</a></li>
                         <li><a href="#">Stage</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-sm-12 item text">
-                    <h3>Haras du Val de Loire</h3>
+                    <h2>Haras du Val de Loire</h2>
                     <ul>
                         <li>Adresse : 999 rue de Chemeau 45560 Saint Denis en Val</li>
-                        <li>N° de contact : 02 38 24 75 20</li>
-                        <li>Email : contact@harasduvaldeloire.fr</li>
+                        <li>N° de contact : <img class="phone number" src="/assets/images/telharas.png"alt="Phone number"></li>
+                        <li>Email : <img class="email" src="/assets/images/emailharas.png"alt="Email"></li>
                     </ul>
                 </div>
                 <div class="col item social">
