Integration border card none bootstrap and resolving problems

--- a/src/View/User/Includes/_welcome_background_slideshow.html.twig
+++ b/src/View/User/Includes/_welcome_background_slideshow.html.twig
@@ -7,7 +7,17 @@
             <div class="principal">
                 <h1>lorem ipsum</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                {% include 'User/Includes/_welcome_card.html.twig' %}
+                <div class="card border-0" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Lorem ipsum</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rutrum lectus sed velit fermentum sollicitudin. Nulla molestie metus eget.</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item border-0">Lorem ipsum dolor.</li>
+                    <li class="list-group-item border-0">Lorem ipsum dolor sit.</li>
+                    <li class="list-group-item border-0">Lorem ipsum dolor.</li>
+                </ul>
+                </div>
             </div>
         </div>
     </div>
